create login page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -73,7 +73,10 @@
 
   /*MY Colors*/
   --color-blue: #3392EA;
-
+  --color-mytext: #000000;
+  --color-loginbackground: #FFFFFF;
+  --color-grey-text:#00000099;
+  --color-grey-line: #0000001F;
 
   /* Material UI text & common colors */
   --color-text-primary: rgb(var(--mui-palette-text-primaryChannel));
