--- a/src/globals.css
+++ b/src/globals.css
@@ -78,6 +78,7 @@
   --color-active:#3392EA33;
   --color-mygrey:#F4F5F7;
   --color-inputB: #00000033;
+  --color-border: #00000040;
 
 
   /* Material UI text & common colors */
